[package]
name = "virtualalloc"
version = "0.1.0"
authors = ["Grégoire Geis <git@gregoirege.is>"]
repository = "https://github.com/6A/virtualalloc"
license = "MIT"
description = """
An allocator based on VirtualAlloc or mmap, that can grow without invalidating pointers to\
its contents.
"""

[target.'cfg(windows)'.dependencies]
kernel32-sys = "^0.2"

[dev-dependencies]
speculate = "^0.0"

[features]
default = ["std"]
std = []
